<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_image"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopForLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopForTextviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tilLoginPassword"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/switchRememberLoginCreditentials"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilLoginEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switchRememberLoginCreditentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/remember_login_creditentials"
        android:textColor="@color/white"

        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineTopForLoginButton"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"

        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_green"
        android:fontFamily="@font/russo_one"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineTopForTextviews"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopForLoginButton"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopForTextviews" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
        app:layout_constraintVertical_bias="0.13999999" />

    <ProgressBar
        android:id="@+id/progBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>