<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ResetPasswordActivity"
    android:background="@drawable/main_background_image"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopForEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailFromResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTopForEmailInput"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/main_transparent_white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmailFromResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPasswordCheckEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilEmailFromResetPassword"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reset_password_check_email_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendEmailForPasswordReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_green"
        android:fontFamily="@font/russo_one"
        android:text="@string/send_email"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordCheckEmail"
        app:layout_constraintVertical_bias="0.36" />

    <ProgressBar
        android:id="@+id/progBarResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>