<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_image"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.CreateAccountActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegisterFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/firstname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterFirstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegisterLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/lastname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterLastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/main_transparent_white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:hint="@string/confirm_password"
            android:inputType="textWebPassword"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRegisterDateOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corners_transparent_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/russo_one"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterConfirmPassword" />

    <Spinner
        android:id="@+id/spnRegisterGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corners_transparent_white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterDateOfBirth" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutDailyNotificationsHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corners_white_border"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/spnRegisterGender">

        <TextView
            android:id="@+id/tvRegisterWakeupHourTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="I usually wake up at 07:00"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvRegisterSleepHourTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="I usually go to bed at 23:00"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterWakeupHourTag" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_green"
        android:fontFamily="@font/russo_one"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutDailyNotificationsHours" />

    <ProgressBar
        android:id="@+id/progBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>